Fix colors on dark mode

--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -39,7 +39,7 @@ $danger: rgb(124, 41, 20);
 	:root {
 		--color-text: #{ $white };
 		--color-heading: #{ $white };
-		--color-control: #{ $gray-70 };
+		--color-control: #{ $gray-80 };
 		--color-border: #{ $gray-20 };
 		--color-background: #{ $gray-80 };
 		--color-decoration: #{ $primary-light };
