--- a/static/omega.css
+++ b/static/omega.css
@@ -343,7 +343,7 @@ template {
   :root {
     --color-text: white;
     --color-heading: white;
-    --color-control: #404A5E;
+    --color-control: #323C4F;
     --color-border: #B2B8C2;
     --color-background: #323C4F;
     --color-decoration: #72baff;
